[package]
edition = "2021"
name = "wirep"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora = {version ="0.1", features = ["lb"]}
async-trait = "0.1"
log = "0.4.21"
prometheus = "0.13.3"
structopt = "0.3.26"
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-proxy = "0.1.0"
env_logger = "0.11.2"

[dev-dependencies]
